HOTFIX: ladning css fix to prevent overflow

--- a/frontend/loopback/src/app/pages/landing/landing.css
+++ b/frontend/loopback/src/app/pages/landing/landing.css
@@ -117,10 +117,14 @@
 }
 
 .bottom-grid {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  height: 40px;
-  margin-top: auto;
+  height: 80px;
 }
 
 .bottom-card {
@@ -162,12 +166,15 @@
   }
 
   .bottom-grid {
-    grid-template-columns: 1fr;
+    position: static;
     height: auto;
+    grid-template-columns: 1fr;
     row-gap: 16px;
-    margin-top: 100px;
+    margin-top: 50px;
+    left: auto;
+    right: auto;
+    bottom: auto;
   }
-
   .bottom-card {
     padding: 10px 16px;
   }
